--- a/foodbay/backend/package.json
+++ b/foodbay/backend/package.json
@@ -9,8 +9,10 @@
   "author": "asv",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
+    "jsonwebtoken": "^9.0.1",
     "mongodb": "^5.8.1",
     "mongoose": "^7.4.5",
     "nodemon": "^3.0.1"
